--- a/src/main/java/com/byteme/fxml/ConfigureScreen.fxml
+++ b/src/main/java/com/byteme/fxml/ConfigureScreen.fxml
@@ -6,7 +6,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox id="vboxWhole" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<VBox id="vboxWhole" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.byteme.MainController">
    <children>
       <HBox id="hboxTitle" prefHeight="100.0" prefWidth="200.0">
          <children>
@@ -83,7 +83,7 @@
                         <Insets left="10.0" top="70.0" />
                      </VBox.margin>
                   </RadioButton>
-                  <Button id="btnOk" mnemonicParsing="false" text="OK">
+                  <Button id="btnOk" mnemonicParsing="false" onAction="#openPlayerConfig" text="OK">
                      <font>
                         <Font name="AR DESTINE" size="28.0" />
                      </font>
