--- a/src/main/java/com/byteme/fxml/CreatePlayer.fxml
+++ b/src/main/java/com/byteme/fxml/CreatePlayer.fxml
@@ -6,7 +6,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox id="vBoxPlayerScreen" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<VBox id="vBoxPlayerScreen" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <TextArea id="txtAreaCreatelbl" editable="false" prefHeight="165.0" prefWidth="1280.0" text="Create Player 1">
          <font>
@@ -83,5 +83,10 @@
             </RadioButton>
          </children>
       </HBox>
+      <Button id="btnOk" mnemonicParsing="false" onAction="#openTemp" text="OK">
+         <font>
+            <Font name="AR DESTINE" size="28.0" />
+         </font>
+      </Button>
    </children>
 </VBox>
