--- a/src/main/java/com/byteme/fxml/PlayerConfig.fxml
+++ b/src/main/java/com/byteme/fxml/PlayerConfig.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.collections.*?>
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #000099;" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.byteme.MainController">
    <children>
@@ -17,7 +18,17 @@
       <Label layoutX="39.0" layoutY="245.0" text="Color" textFill="RED" />
       <TextField fx:id="playerName" layoutX="117.0" layoutY="125.0" prefHeight="11.0" prefWidth="249.0" />
       <ColorPicker fx:id="playerColor" layoutX="117.0" layoutY="240.0" />
-      <ChoiceBox fx:id="playerRace" layoutX="117.0" layoutY="185.0" prefWidth="150.0" />
+      <ChoiceBox fx:id="playerRace" layoutX="117.0" layoutY="185.0" prefWidth="150.0" value="Flapper">
+         <items>
+            <FXCollections fx:factory="observableArrayList">
+               <String fx:value="Flapper" />
+               <String fx:value="Bonzoid" />
+               <String fx:value="Ugaite" />
+               <String fx:value="Buzzite" />
+               <String fx:value="Human" />
+            </FXCollections>
+         </items>
+      </ChoiceBox>
       <Button layoutX="247.0" layoutY="314.0" mnemonicParsing="false" onAction="#savePlayerConfig" prefHeight="31.0" prefWidth="106.0" text="OK" />
       <Separator layoutX="166.0" layoutY="72.0" prefHeight="3.0" prefWidth="275.0" />
       <Separator layoutX="163.0" layoutY="37.0" prefHeight="3.0" prefWidth="275.0" />
