--- a/src/main/resources/fxml/LoadGame.fxml
+++ b/src/main/resources/fxml/LoadGame.fxml
@@ -6,7 +6,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #000099;" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.byteme.MainController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #000099;" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.byteme.Controllers.MainController">
    <children>
       <Button defaultButton="true" layoutX="118.0" layoutY="258.0" mnemonicParsing="false" onAction="#openTemp" prefHeight="40.0" prefWidth="115.0" text="Load Game" textFill="RED" />
       <Button layoutX="379.0" layoutY="258.0" mnemonicParsing="false" onAction="#loadConfigureScreen" prefHeight="40.0" prefWidth="115.0" text="New Game" textFill="RED" />
