--- a/src/main/resources/fxml/LoadGame.fxml
+++ b/src/main/resources/fxml/LoadGame.fxml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.scene.effect.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #000099;" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.byteme.Controllers.MainController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #2C3E50;" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.byteme.Controllers.MainController">
    <children>
-      <Button defaultButton="true" layoutX="118.0" layoutY="258.0" mnemonicParsing="false" onAction="#openTemp" prefHeight="40.0" prefWidth="115.0" text="Load Game" textFill="RED" />
-      <Button layoutX="379.0" layoutY="258.0" mnemonicParsing="false" onAction="#loadConfigureScreen" prefHeight="40.0" prefWidth="115.0" text="New Game" textFill="RED" />
-      <Label layoutX="125.0" layoutY="108.0" prefHeight="100.0" prefWidth="351.0" text="Load old configuration settings or start new game?" textAlignment="CENTER" textFill="#f80000" wrapText="true">
+      <Button layoutX="64.0" layoutY="253.0" mnemonicParsing="false" onAction="#openTemp" prefHeight="40.0" prefWidth="115.0" text="Load Game" />
+      <Button defaultButton="true" layoutX="421.0" layoutY="253.0" mnemonicParsing="false" onAction="#loadConfigureScreen" prefHeight="40.0" prefWidth="115.0" text="New Game" />
+      <Label layoutX="64.0" layoutY="100.0" prefHeight="100.0" prefWidth="472.0" text="Load old configuration settings or start new game?" textAlignment="CENTER" textFill="WHITE" wrapText="true">
          <font>
-            <Font size="24.0" />
+            <Font name="System Bold" size="30.0" />
          </font>
       </Label>
    </children>
