--- a/src/main/resources/fxml/StartGame.fxml
+++ b/src/main/resources/fxml/StartGame.fxml
@@ -8,7 +8,7 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#startGame" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #2C3E50;" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.byteme.Controllers.MainController">
    <children>
-      <ImageView fitHeight="78.0" fitWidth="491.0" layoutX="55.0" layoutY="33.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="78.0" fitWidth="491.0" layoutX="55.0" layoutY="23.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/logo.png" />
          </image>
@@ -23,5 +23,10 @@
             <Font name="System Font Regular" size="10.0" />
          </font>
       </Text>
+      <ImageView fitHeight="163.0" fitWidth="220.0" layoutX="191.0" layoutY="119.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/horse.png" />
+         </image>
+      </ImageView>
    </children>
 </Pane>
