--- a/src/main/resources/fxml/Town.fxml
+++ b/src/main/resources/fxml/Town.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"  prefHeight="700.0" prefWidth="935.0" style="-fx-background-color: #000099;" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.byteme.Controllers.TownController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="935.0" style="-fx-background-color: #000099;" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.byteme.Controllers.TownController">
    <children>
       <AnchorPane layoutX="104.0" layoutY="47.0" prefHeight="480.0" prefWidth="728.0" style="-fx-background-color: #EFDD6F;">
          <children>
@@ -22,5 +22,10 @@
             <Label layoutX="111.0" layoutY="78.0" text="Assay Office" />
          </children>
       </AnchorPane>
+      <Button layoutX="704.0" layoutY="603.0" mnemonicParsing="false" onAction="#goToMap" text="Back to Map">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Button>
    </children>
 </Pane>
