--- a/src/main/resources/fxml/placeholder.fxml
+++ b/src/main/resources/fxml/placeholder.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.*?>
 
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #000099;" xmlns="http://javafx.com/javafx/8.0.40" fx:controller="com.byteme.Controllers.MainController" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #000099;" xmlns="http://javafx.com/javafx/8.0.40" fx:controller="com.byteme.Controllers.StartScreenController" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label layoutX="193.0" layoutY="183.0" text="Under Construction!" textFill="RED">
          <font>
