Border changes on player click

--- a/src/main/resources/fxml/Map.fxml
+++ b/src/main/resources/fxml/Map.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.scene.effect.*?>
 <?import javafx.scene.control.*?>
@@ -7,9 +8,9 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="935.0" style="-fx-background-color: #000099;" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.byteme.Controllers.MapController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="748.0" prefWidth="1268.0" style="-fx-background-color: #000099;" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.byteme.Controllers.MapController">
    <children>
-      <GridPane fx:id="map" gridLinesVisible="true" layoutX="18.0" layoutY="21.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="900.0" style="-fx-border-color: Black;">
+      <GridPane fx:id="map" gridLinesVisible="true" hgap="15.0" layoutX="18.0" layoutY="21.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="560.0" prefWidth="1020.0" style="-fx-border-color: Orange; -fx-border-width: 10px;" vgap="15.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -28,15 +29,26 @@
           <RowConstraints minHeight="10.0" prefHeight="100.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="100.0" vgrow="SOMETIMES" />
         </rowConstraints>
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
+         <padding>
+            <Insets bottom="10.0" left="5.0" right="10.0" top="10.0" />
+         </padding>
       </GridPane>
-      <Button fx:id="pass" layoutX="683.0" layoutY="615.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="220.0" text="Pass">
+      <Button fx:id="pass" layoutX="1069.0" layoutY="623.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="146.0" text="Pass">
          <font>
             <Font size="24.0" />
          </font>
       </Button>
-      <Label fx:id="playerLabel" layoutX="39.0" layoutY="542.0" prefHeight="51.0" prefWidth="527.0" text="Player 1" textFill="WHITE">
+      <Label fx:id="playerLabel" layoutX="1090.0" layoutY="14.0" prefHeight="135.0" prefWidth="146.0" text="Player 1" textFill="WHITE">
          <font>
-            <Font size="36.0" />
+            <Font size="24.0" />
+         </font>
+      </Label>
+      <Label fx:id="phase" layoutX="39.0" layoutY="648.0" prefHeight="51.0" prefWidth="527.0" text="Phase" textFill="WHITE">
+         <font>
+            <Font size="24.0" />
          </font>
       </Label>
    </children>
