--- a/src/main/resources/fxml/Map.fxml
+++ b/src/main/resources/fxml/Map.fxml
@@ -8,9 +8,9 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="748.0" prefWidth="1268.0" style="-fx-background-color: #000099;" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.byteme.Controllers.MapController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="784.0" prefWidth="1313.0" style="-fx-background-color: #000099;" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.byteme.Controllers.MapController">
    <children>
-      <GridPane fx:id="map" gridLinesVisible="true" hgap="15.0" layoutX="18.0" layoutY="21.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="560.0" prefWidth="1020.0" style="-fx-border-color: Orange; -fx-border-width: 10px;" vgap="15.0">
+      <GridPane fx:id="map" gridLinesVisible="true" hgap="10.0" layoutX="18.0" layoutY="21.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="580.0" prefWidth="1056.0" style="-fx-border-color: Orange; -fx-border-width: 10px;" vgap="10.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -36,7 +36,7 @@
             <Insets bottom="10.0" left="5.0" right="10.0" top="10.0" />
          </padding>
       </GridPane>
-      <Button fx:id="pass" layoutX="1069.0" layoutY="623.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="146.0" text="Pass">
+      <Button fx:id="pass" layoutX="1110.0" layoutY="648.0" mnemonicParsing="false" onAction="#updatePlayer" prefHeight="43.0" prefWidth="146.0" text="Pass">
          <font>
             <Font size="24.0" />
          </font>
@@ -46,10 +46,11 @@
             <Font size="24.0" />
          </font>
       </Label>
-      <Label fx:id="phase" layoutX="39.0" layoutY="648.0" prefHeight="51.0" prefWidth="527.0" text="Phase" textFill="WHITE">
+      <Label fx:id="phaseLabel" layoutX="37.0" layoutY="648.0" prefHeight="51.0" prefWidth="527.0" text="Phase" textFill="WHITE">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
+      <Label fx:id="moneyLabel" layoutX="1090.0" layoutY="102.0" prefHeight="21.0" prefWidth="186.0" text="MONEY:" textFill="#39bf2a" />
    </children>
 </Pane>
