--- a/src/main/resources/fxml/Map.fxml
+++ b/src/main/resources/fxml/Map.fxml
@@ -62,5 +62,6 @@
             <Font size="15.0" />
          </font>
       </Label>
+       <Label fx:id="roundLabel" layoutX="1090.0" layoutY="200.0" prefHeight="21.0" prefWidth="186.0" text="ROUND:" textFill="#39bf2a" />
    </children>
 </Pane>
